--- a/game.css
+++ b/game.css
@@ -6,12 +6,14 @@ body {
     font-family: 'Lobster', cursive;
     font-size: 50px;
     color: rgb(7, 229, 245);
+    text-align: center;
   }
 
-  pp {
+  p5 {
     font-size: 20px;
     color: rgb(103, 214, 209);
     font-family: 'Lobster', cursive;
+    text-align: center;
   }
 
     h2{
